<resources>
    <string name="BackUp_folder">"//Bowling_Max//"</string>
    <string name="Backup_prefix">"Bowling_MAX"</string>
    <string name="BackupFileExtension">".Bms"</string>
    <string name="Backup_commOk">" Datas backuped correctly "</string>
    <string name="restore_commOk">" Datas restored correctly "</string>
    <string name="database_name">"DB.Bms"</string>
    <string name="app_name">Bowling MAX!</string>
    <string name="sub_head">Lets go Bowling!</string>
    <string name="BackupRestoreTitle">Backup or restore data</string>
    <string name="one_player_btn">One player Game</string>
    <string name="one_player_quick_head">Quick Game. One player.</string>
    <string name="team_play_btn">Team Play</string>
    <string name="statistics_btn">Statistics</string>
    <string name="createPlayerErrorEmail"> Enter a proper e-mail address</string>
    <string name="createPlayerErrorName">Enter a proper name(min 3 char. max 15)</string>
    <string name="createPlayerErrorSurName">Enter a proper lastname(min 3 char. max 15)</string>
    <string name="createPlayerErrorhome">Enter a proper hometown(min 3 char. max 15) or leave it blank</string>
    <string name="createPlayerErrorYear">type proper year of your birth or leavi it blank (between 1900-</string>
    <string name="createPlayerErrorCantAdd">Error!\nCan\'t add Player!</string>
    <string name="playerAddedtoDB">Player added to the database.</string>
    <string name="login_btn">Login</string>
    <string name="one_player_choose">Select Player:</string>
    <string name="spinner_title">Players</string>
    <string name="spinner_league">play League</string>
    <string name="spinner_patterns">choose pattern</string>
    <string name="choose_nmbr_pins">Choose a numbers of pins</string>
    <string name="u_choose">You choose : </string>
    <string name="forbid_edit_2_throw">You can\'t edit second throw! You have Strike!</string>
    <string name="error_no_data">Error! There is no data! Create One!</string>
    <string name="game_number">Game Number: </string>
    <string name="change_cancel">Changes Canceled</string>
    <string name="aygms"> games max score = </string>
    <string name="ymsig">Your max score in game: </string>
    <string name="sure_reset">Are You sure to reset all games score?</string>
    <string name="sure_add">Are You sure to add 1 game?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="new_player">Create new player</string>
    <string name="quick_game">Quick Game</string>
    <string name="ef">Edit Frame.</string>
     <string name="hmg">How much Game do you want to play?</string>
    <string name="opg">One Player Game.</string>
    <string name="editor_tittle">Edit Frame no. </string>
    <string name="editor_tittle2">Now result is: </string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="first">first</string>
    <string name="play">play</string>
    <string name="second">second</string>
    <string name="quick_play_btn">Quick Play</string>
    <string name="frmNmbr">frmNmbr</string>
    <string name="gameNumber">gameNumber</string>
    <string name="headNmbrGame">Choose a number of games</string>
    <string name="league_choose">Create League</string>
    <string name="training">Training</string>
    <string name="tournament">Create Tournamnet</string>
    <string name="name">Name*</string>
    <string name="surname">Surname*</string>
    <string name="email">E-mail*</string>
    <string name="name2">Name : &#160;</string>
    <string name="surname2">Surname : &#160;</string>
    <string name="email2">E-mail : &#160;</string>
    <string name="hand">Use hand</string>
    <string name="hometown">Hometown</string>
    <string name="age">year of birth</string>
    <string name="create_info">Form with * must be filled</string>
    <string name="rightH">right hand</string>
    <string name="leftH">left hand</string>
    <string name="emailTeam">E-Mail</string>
    <string name="team_choose">Choose team to play:</string>
    <string name="new_team">Create new Team</string>
    <string name="create_team_name">Team name*</string>
    <string name="create_team_home">Hometown of your team</string>
    <string name="create_team_club">CLub</string>
    <string name="create_team_players">choose players for your team</string>
    <string name="back">&#60;-back</string>
    <string name="manyPlayersID">manyPlayerId</string>
    <string name="game_type">gameType</string>
    <string name="player_id">playerId</string>
    <string name="league_id">leagueId</string>
    <string name="tournament_id">tournamentId</string>
    <string name="pattern_id">patternId</string>
    <string name="ball_id">ballId</string>
    <string name="team_head">Play as Team</string>
    <string name="select_lg">Select League:</string>
    <string name="play_tournament">Play Tournament</string>
    <string name="error_select">If you want to play first select one!</string>
    <string name="choose_pattern_txt">Choose your default pattern</string>
    <string name="how_much">show:</string>
    <string name="your_patR">You select right Pattern: </string>
    <string name="your_patL">You select left Pattern: </string>
    <string name="download">Press to download patterns/balls.</string>
    <string name="names">name</string>
    <string name="length">length</string>
    <string name="ratio">ratio</string>
    <string name="volume">volume</string>
    <string name="opb">OPB</string>
    <string name="oilPerBoard">Oil Per Board</string>
    <string name="db">db</string>
    <string name="sort">Press buton to sort by:</string>
    <string name="okAndBack">OK! take me back.</string>
    <string name="prev">&#60;&#60;&#60; prev page</string>
    <string name="next">&#62;&#62;&#62; next page</string>
    <string name="error_nameTxt">Enter a proper name(min 3 char. max 15)</string>
    <string name="error_homeTXt">Enter a proper hometown(min 3 char. max 15) or leave it blank</string>
    <string name="select_tour">Select Tournament</string>
    <string name="add1game">Add 1 game</string>
    <string name="ResetAll">Reset all.</string>
    <string name="player">Player: </string>
    <string name="type_league">league</string>
    <string name="type_tour">tournament</string>
    <string name="type_train">training</string>
    <string name="save_confirm">Are you sure?</string>
    <string name="addOK">saved properly to database!</string>
    <string name="error_add">"ERROR! Sorry can't add to database"</string>
    <string name="create_lg_name">League name:</string>
    <string name="create_lg_Home">League home:</string>
    <string name="create_tour_name">Tournament name:</string>
    <string name="create_tour_Home">Tournament location:</string>
    <string name="DB_error">Database ERROR!</string>
    <string name="Debug_error">Debug ERROR!</string>
    <string name="checkUnknown">Set Patterns to /Unknown/</string>
    <string name="checkBoxPatternsSame">Same pattern as on right lane on both lanes</string>
    <string name="search">Search</string>
    <string name="download_main">Download Data</string>
    <string name="dialog_search_text">Search for Pattern name:</string>
    <string name="search_error_empty">there is no such item. Try another search.</string>
    <string name="search_error_reload">Or reload all patterns.</string>
    <string name="create_torunament">Create tournament:</string>
    <string name="error_edit_frame">Can not edit! No Frame!</string>
    <string name="error_edit_frame2">Frame out of range 1&#62;12! Can not edit freame no: </string>
    <string name="choose_pins">Choose pins that felt down at first throw</string>
    <string name="choose_pins2">Choose pins that felt down at second throw</string>
    <string name="second_throw">Pins in second</string>
    <string name="first_throw">Pins in first</string>
    <string name="p0">0</string>
    <string name="p1">1</string>
    <string name="p2">2</string>
    <string name="p3">3</string>
    <string name="p4">4</string>
    <string name="p5">5</string>
    <string name="p6">6</string>
    <string name="p7">7</string>
    <string name="p8">8</string>
    <string name="p9">9</string>
    <string name="p10">10</string>
    <string name="debug">DEBUG</string>
    <string name="manual_choose_pins">Manual set pins</string>
    <string name="failDownload">FAILED Downloading!</string>
    <string name="noNewDownload">Sorry! There is nothing new to download!</string>
    <string name="main_settings">Settings</string>
    <string name="settings_theme">Theme settings</string>
    <string name="main_about">About</string>
    <string name="main_donate">Donate!</string>
    <string name="main_viewAll">Backup/Restore datas</string>
    <string name="main_Edit">Edit/Create</string>
    <string name="Graph">Stats</string>
    <string name="filled">filled</string>
    <string name="PieChartTitleSSO">Pie Chart X-/-opens frames</string>
    <string name="strikes">Strikes &#160;</string>
    <string name="spares">Spares &#160;</string>
    <string name="opens">opens &#160;</string>
    <string name="NoData">Sorry! No data to display!</string>
    <string name="AllInfoNoGamePlay">Number of game played : &#160;</string>
    <string name="AllInfoNoMatchPlay">Number of match played : &#160;</string>
    <string name="AllInfoHighSeriesR">High series score : &#160;</string>
    <string name="AllInfoHighSeriesERRor">High series: there is no high series &#160;</string>
    <string name="AllInfoHighseriesTypeR">Type of high series : &#160;</string>
    <string name="AllInfoHighseriesDateR">High series date : &#160;</string>
    <string name="AllInfoHighAvgR">High series Average  : &#160;</string>
  	<string name="AllInfoSpinnerSelectText">Select a chart to show:</string>
  	<string name="AllInfoSpinnerItemPieChartXSpOp">Pie chart: % X,/,opens frames</string>
  	<string name="AllInfoSpinnerItemLineChartAVG">Line chart: show average during matches</string>
  	<string name="AllInfoSpinnerItemChartHighToAVG">bar chart show avg/max/min game</string>
  	<string name="AllInfoSpinnerItemLineChartAvgMoving">Line chart moving average</string>
  	<string name="AllInfoSpinnerItemLineChartbothAVG">Line chart moving average and match avg</string>
  	<string name="AllInfoSpinnerItemRangeMinMaxChart">Min-Max score during match</string>
    <string name="AllInfoHighSeriesNoGame">Number of game in match : &#160;</string>
    <string name="AllInfoHighSeriesaverage">Average in match : &#160;</string>
    <string name="AllInfoTotalPinfall">Total Pinfall : &#160;</string>
    <string name="SelectChart_allInfo">Show all info about player</string>
    <string name="SelectChart_allInfoCharts">Show charts player</string>
    <string name="SelectChart_allInfo_league">Show all info about selected player in league</string>
    <string name="SelectChart_allInfo_tour">Show all info about selected player in tournament</string>
    <string name="SelectChart_charts_Lg">Show selected player charts in selected league</string>
    <string name="SelectChart_charts_tour">Show selected player charts in selected tournament</string>
    <string name="Edit_Player">Edit Player</string>
    <string name="Edit_League">Edit League</string>
    <string name="Edit_Tournament">Edit Tournament</string>
    <string name="Edit_match">Edit Match and Game</string>
    <string name="Edit_game">Edit Game</string>
    <string name="Edit_games">Edit Games</string>
    <string name="Match_info_type">type: &#160;</string>
    <string name="edit_MAtch_changeTypeTrain">Change Type to training</string>
    <string name="edit_MAtch_changeTypeLg">Change  to selected league</string>
    <string name="edit_MAtch_changeTypeTour">Change  to selected tournament</string>
    <string name="edit_MAtch_changeDate">Change date</string>
    <string name="edit_match_show_games">Show Games</string>
</resources>